# cv-face-tracker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
